[gd_scene load_steps=49 format=3 uid="uid://c5l4g6sbkaap5"]

[ext_resource type="Environment" uid="uid://hfrltlyxla57" path="res://assets/materials/worldEnvironment.tres" id="1_agsqe"]
[ext_resource type="PackedScene" uid="uid://rj78yp671xig" path="res://assets/instances/player.tscn" id="1_gxwgs"]
[ext_resource type="PackedScene" uid="uid://0dyxle2qjymh" path="res://assets/instances/enemy.tscn" id="2_7e63c"]
[ext_resource type="Script" uid="uid://vwxyuhp0rhq3" path="res://assets/shaders/StylizedPostProcess.gd" id="2_i2p71"]
[ext_resource type="Shader" uid="uid://dd8odwh7xs5jx" path="res://assets/shaders/test_PostProcess.gdshader" id="3_catwk"]
[ext_resource type="Material" uid="uid://pjs3vvcxv158" path="res://assets/materials/brick_texture.tres" id="3_sxqup"]
[ext_resource type="Script" uid="uid://cw6hno2d7f037" path="res://assets/scripts/camera.gd" id="6_bk5pj"]
[ext_resource type="Shader" uid="uid://cx1igpk3ih54r" path="res://assets/shaders/stylized_fire.gdshader" id="7_ratyp"]
[ext_resource type="Script" uid="uid://d0by4tb3q708j" path="res://assets/scripts/spell_holder.gd" id="8_7fcpv"]
[ext_resource type="PackedScene" uid="uid://b1hgydtnydbhu" path="res://assets/instances/chest.tscn" id="8_b73rd"]
[ext_resource type="Texture2D" uid="uid://b4syey3swopp5" path="res://assets/textures/HoleNoise.png" id="8_ovstg"]
[ext_resource type="Texture2D" uid="uid://eegyy62oa2cf" path="res://assets/textures/FireMask.png" id="9_4xobp"]
[ext_resource type="Script" uid="uid://dpot3qvyp6i8y" path="res://assets/scripts/health_bar.gd" id="9_k10lk"]
[ext_resource type="Shader" uid="uid://t2dbgra7byy7" path="res://assets/shaders/water.gdshader" id="10_48jow"]
[ext_resource type="Script" uid="uid://cqbqjog78pj66" path="res://assets/scripts/button.gd" id="10_r2pxi"]
[ext_resource type="PackedScene" uid="uid://b6dugars4a3sg" path="res://assets/instances/SpellComponents/Bounce_Modifier.tscn" id="10_x8tym"]
[ext_resource type="AudioStream" uid="uid://b1mp3m1ddvd67" path="res://assets/audio/TestAudio.mp3" id="11_5ta4g"]
[ext_resource type="PackedScene" uid="uid://bysfshy88ujwd" path="res://assets/instances/SpellComponents/MultiCast_Modifier.tscn" id="11_oslgk"]
[ext_resource type="Script" uid="uid://b14hrxf0b36m" path="res://assets/scripts/spell_inventory.gd" id="12_pddt7"]
[ext_resource type="PackedScene" uid="uid://bofpo86mpeygu" path="res://assets/instances/spell.tscn" id="14_hp6ix"]
[ext_resource type="Script" uid="uid://c8y8e58hj8cvv" path="res://assets/scripts/player_ui.gd" id="15_p4nej"]
[ext_resource type="PackedScene" uid="uid://cihs3y14gd8fe" path="res://assets/instances/SpellComponents/shape_modifier.tscn" id="15_tv78k"]
[ext_resource type="Script" uid="uid://dey0sosbyf0pr" path="res://assets/scripts/spell_bar.gd" id="19_0aego"]
[ext_resource type="PackedScene" uid="uid://dsbdgqpec7q5f" path="res://assets/instances/spell_tester_scene.tscn" id="23_ld1gn"]
[ext_resource type="Script" uid="uid://b3fit0upm5s04" path="res://assets/scripts/pause_menu.gd" id="24_q3krr"]
[ext_resource type="Script" uid="uid://dpveo5m3egl10" path="res://assets/scripts/spell_editor.gd" id="25_33rrm"]

[sub_resource type="CompositorEffect" id="CompositorEffect_i2p71"]
resource_local_to_scene = false
resource_name = ""
enabled = true
effect_callback_type = 4
needs_motion_vectors = false
needs_normal_roughness = false
script = ExtResource("2_i2p71")
shade_smoothness = 0.81
color_bands = 12.0
metadata/_custom_type_script = "uid://vwxyuhp0rhq3"

[sub_resource type="Compositor" id="Compositor_xa8c5"]
compositor_effects = Array[CompositorEffect]([SubResource("CompositorEffect_i2p71")])

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qta6k"]
render_priority = 0
shader = ExtResource("3_catwk")
shader_parameter/shade_smoothness = 0.81
shader_parameter/color_bands = 12.0

[sub_resource type="QuadMesh" id="QuadMesh_s63j6"]
material = SubResource("ShaderMaterial_qta6k")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjokc"]
bg_color = Color(0.523567, 0.581776, 0.847777, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_hn0f1"]
viewport_path = NodePath("Player/SubViewport")

[sub_resource type="BoxMesh" id="BoxMesh_mtmu5"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxShape3D" id="BoxShape3D_g50ke"]
size = Vector3(60, 2, 60)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nupdu"]
render_priority = 0
shader = ExtResource("7_ratyp")
shader_parameter/noise_texture = ExtResource("8_ovstg")
shader_parameter/texture_mask = ExtResource("9_4xobp")
shader_parameter/emission_intensity = 9.5
shader_parameter/time_scale = 3.0
shader_parameter/texture_scale = Vector2(1, 1)
shader_parameter/edge_softness = 0.1

[sub_resource type="Gradient" id="Gradient_dryqh"]
colors = PackedColorArray(1.2, 0.314, 0.138, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a8nam"]
gradient = SubResource("Gradient_dryqh")
width = 128

[sub_resource type="Curve" id="Curve_bvtnb"]
_data = [Vector2(0, 0), 0.0, 4.39011, 0, 0, Vector2(0.558824, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_net7e"]
width = 128
curve = SubResource("Curve_bvtnb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xqumn"]
lifetime_randomness = 0.81
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 0.5
initial_velocity_max = 0.5
gravity = Vector3(0, 0, 0)
linear_accel_min = 4.0
linear_accel_max = 4.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_net7e")
color_ramp = SubResource("GradientTexture1D_a8nam")
sub_emitter_mode = 1
sub_emitter_frequency = 4.0

[sub_resource type="QuadMesh" id="QuadMesh_v3eqb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06pi7"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32e1y"]
bg_color = Color(0.458824, 0, 0, 1)
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03ilm"]

[sub_resource type="World3D" id="World3D_0hpyr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvd33"]
bg_color = Color(0, 0, 0, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tcyik"]
render_priority = 0
shader = ExtResource("10_48jow")
shader_parameter/absorption_color = Color(1, 0.35, 0, 1)
shader_parameter/fresnel_radius = 2.0
shader_parameter/fresnel_color = Color(0, 0.57, 0.72, 1)
shader_parameter/roughness = 0.15
shader_parameter/specular = 0.25
shader_parameter/depth_distance = 25.0
shader_parameter/beers_law = 4.5
shader_parameter/displacement_strength = 0.0
shader_parameter/displacement_scroll_speed = 0.1
shader_parameter/displacement_scroll_offset = Vector2(-0.2, 0.3)
shader_parameter/displacement_scale_offset = 0.5
shader_parameter/displacement_scale = Vector2(0.04, 0.04)
shader_parameter/edge_thickness = 0.3
shader_parameter/edge_speed = 0.35
shader_parameter/edge_noise_scale = Vector2(0.4, 0.4)
shader_parameter/influence_size = 1.0
shader_parameter/player_wave_frequenzy = 10.0
shader_parameter/player_wave_speed = 5.0
shader_parameter/caustic_size = 2.0
shader_parameter/caustic_range = 40.0
shader_parameter/caustic_strength = 0.08
shader_parameter/refraction_strength = 1.25
shader_parameter/normal_map_strength = 1.0
shader_parameter/scroll_speed = 0.3
shader_parameter/scroll_offset = Vector2(0.1, -0.3)
shader_parameter/scale_offset = 0.5
shader_parameter/normal_map_scale = Vector2(0.1, 0.1)
shader_parameter/wind_intensity = 0.0
shader_parameter/wind_direction = Vector3(0, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_2es6m"]
material = SubResource("ShaderMaterial_tcyik")

[node name="Main" type="Node"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_agsqe")
compositor = SubResource("Compositor_xa8c5")

[node name="Camera" type="Node3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0, 0, -13)
script = ExtResource("6_bk5pj")
camera_sensitivity = 2.0
target = NodePath("../Player")

[node name="Camera3D" type="Camera3D" parent="Camera"]
transform = Transform3D(1, -1.19209e-07, 2.38419e-07, -1.77638e-14, 0.866025, 0.500001, -2.38419e-07, -0.5, 0.866025, -0.22198, 7.15, 10.1848)
projection = 1
fov = 37.8493
size = 15.0
far = 150.0

[node name="PostProcess" type="MeshInstance3D" parent="Camera"]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 6.36396, -3, -6.36396)
visible = false
sorting_use_aabb_center = false
cast_shadow = 0
extra_cull_margin = 16384.0
ignore_occlusion_culling = true
gi_mode = 0
mesh = SubResource("QuadMesh_s63j6")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.766706, 0.641998, 0, -0.641998, -0.766706, 0, 14.8554, 0)
light_angular_distance = 2.2
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_blend_splits = true
sky_mode = 1

[node name="Effects" type="Node3D" parent="."]

[node name="SpellContainer" type="Node3D" parent="."]

[node name="CurrentEnemies" type="Node3D" parent="."]

[node name="Enemy" parent="CurrentEnemies" node_paths=PackedStringArray("player", "spells") instance=ExtResource("2_7e63c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 5)
player = NodePath("../../Player")
spells = [NodePath("SpellHolder/Fireball")]

[node name="SpellHolder" type="Node3D" parent="CurrentEnemies/Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Fireball" parent="CurrentEnemies/Enemy/SpellHolder" node_paths=PackedStringArray("spell_container", "caster", "holder", "spell_shape") instance=ExtResource("14_hp6ix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
spell_container = NodePath("../../../../SpellContainer")
caster = NodePath("../..")
holder = NodePath("..")
spell_name = "Fire Ball"
spell_shape = NodePath("../../../../Player/Inventory/Ball")

[node name="Player" parent="." instance=ExtResource("1_gxwgs")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 1, -12)
HEALTH = 50.0
ROTATE_SPEED = 25

[node name="Inventory" type="Node3D" parent="Player"]

[node name="Ball" parent="Player/Inventory" instance=ExtResource("15_tv78k")]
modifier_name = "Ball Shape"

[node name="Arrow" parent="Player/Inventory" instance=ExtResource("15_tv78k")]
spell_shape = 1
modifier_name = "Arrow Shape"

[node name="Shield" parent="Player/Inventory" instance=ExtResource("15_tv78k")]
spell_shape = 2
modifier_name = "Block Shape"

[node name="Slash" parent="Player/Inventory" instance=ExtResource("15_tv78k")]
spell_shape = 3
modifier_name = "Slash Shape"

[node name="SpellHolder" type="Node3D" parent="Player" node_paths=PackedStringArray("Spell1", "Spell2", "Spell3", "Spell4", "spell_charge_bar")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
script = ExtResource("8_7fcpv")
Spell1 = NodePath("Fireball")
Spell2 = NodePath("FireArrow")
Spell3 = NodePath("FireShield")
Spell4 = NodePath("FireSlash")
spell_charge_bar = NodePath("../SubViewport/ProgressBar")

[node name="Fireball" parent="Player/SpellHolder" node_paths=PackedStringArray("spell_container", "caster", "holder", "spell_shape", "modifiers") instance=ExtResource("14_hp6ix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
spell_container = NodePath("../../../SpellContainer")
caster = NodePath("../..")
holder = NodePath("..")
spell_name = "Fire Ball"
spell_shape = NodePath("../../Inventory/Ball")
modifiers = [NodePath("MultiCast_Modifier"), NodePath("Bounce_Modifier")]

[node name="MultiCast_Modifier" parent="Player/SpellHolder/Fireball" instance=ExtResource("11_oslgk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
amount = 8

[node name="Bounce_Modifier" parent="Player/SpellHolder/Fireball" instance=ExtResource("10_x8tym")]
amount = 3

[node name="FireArrow" parent="Player/SpellHolder" node_paths=PackedStringArray("spell_container", "caster", "holder", "spell_shape") instance=ExtResource("14_hp6ix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
spell_container = NodePath("../../../SpellContainer")
caster = NodePath("../..")
holder = NodePath("..")
spell_name = "Fire Arrow"
spell_shape = NodePath("../../Inventory/Arrow")

[node name="FireShield" parent="Player/SpellHolder" node_paths=PackedStringArray("spell_container", "caster", "holder", "spell_shape") instance=ExtResource("14_hp6ix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
spell_container = NodePath("../../../SpellContainer")
caster = NodePath("../..")
holder = NodePath("..")
spell_name = "Fire Shield"
spell_shape = NodePath("../../Inventory/Shield")

[node name="FireSlash" parent="Player/SpellHolder" node_paths=PackedStringArray("spell_container", "caster", "holder", "spell_shape") instance=ExtResource("14_hp6ix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
spell_container = NodePath("../../../SpellContainer")
caster = NodePath("../..")
holder = NodePath("..")
spell_name = "Fire Slash"
spell_shape = NodePath("../../Inventory/Slash")

[node name="SubViewport" type="SubViewport" parent="Player"]
disable_3d = true
transparent_bg = true

[node name="ProgressBar" type="ProgressBar" parent="Player/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.5
offset_top = -19.0
offset_right = 119.5
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_tjokc")
value = 33.49
show_percentage = false

[node name="Sprite3D" type="Sprite3D" parent="Player"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 1, 0, 1.2, 0)
billboard = 1
texture = SubResource("ViewportTexture_hn0f1")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 2
collision_mask = 14

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
material_override = ExtResource("3_sxqup")
mesh = SubResource("BoxMesh_mtmu5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_g50ke")

[node name="Fire" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 0)

[node name="FireParticles" type="GPUParticles3D" parent="Fire"]
material_override = SubResource("ShaderMaterial_nupdu")
cast_shadow = 0
amount = 50
lifetime = 1.52
randomness = 0.74
draw_order = 1
transform_align = 1
process_material = SubResource("ParticleProcessMaterial_xqumn")
draw_pass_1 = SubResource("QuadMesh_v3eqb")

[node name="OmniLight3D" type="OmniLight3D" parent="Fire"]
light_color = Color(1, 0.583333, 0, 1)
light_energy = 6.773
light_size = 0.512
shadow_blur = 10.0
omni_attenuation = 0.107

[node name="Chest" parent="." instance=ExtResource("8_b73rd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.5, -0.395468)

[node name="Chest2" parent="." instance=ExtResource("8_b73rd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.5, -0.395468)

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("15_p4nej")

[node name="HealthBar" type="ProgressBar" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -31.0
offset_right = 288.0
offset_bottom = -4.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_06pi7")
theme_override_styles/fill = SubResource("StyleBoxFlat_32e1y")
value = 35.9
show_percentage = false
script = ExtResource("9_k10lk")

[node name="Label" type="Label" parent="PlayerUI/HealthBar"]
layout_mode = 0
offset_left = 2.0
offset_top = -24.0
offset_right = 75.0
offset_bottom = -1.0
text = "LOADING"

[node name="PlaySoundButton" type="Button" parent="PlayerUI"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 188.0
offset_bottom = 47.0
text = "PLAY SOUND (FUNNY)"
script = ExtResource("10_r2pxi")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PlayerUI/PlaySoundButton"]
stream = ExtResource("11_5ta4g")

[node name="SpellInventory" type="ColorRect" parent="PlayerUI" node_paths=PackedStringArray("spell_holder", "inventory")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -401.0
offset_top = -193.0
offset_right = 401.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129558, 0.129558, 0.129558, 1)
script = ExtResource("12_pddt7")
spell_holder = NodePath("../../Player/SpellHolder")
inventory = NodePath("../../Player/Inventory")

[node name="ScrollContainer" type="ScrollContainer" parent="PlayerUI/SpellInventory"]
layout_mode = 0
offset_top = 29.0
offset_right = 329.0
offset_bottom = 358.0
theme_override_styles/panel = SubResource("StyleBoxFlat_03ilm")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI/SpellInventory/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="PlayerUI/SpellInventory"]
layout_mode = 0
offset_right = 328.0
offset_bottom = 29.0
text = "Current Spells"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="PlayerUI/SpellInventory"]
layout_mode = 0
offset_left = 331.0
offset_top = 1.5
offset_right = 800.0
offset_bottom = 202.5

[node name="SubViewport" type="SubViewport" parent="PlayerUI/SpellInventory/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_0hpyr")
handle_input_locally = false
use_taa = true
size = Vector2i(469, 201)
render_target_update_mode = 0

[node name="Spell_Preview" parent="PlayerUI/SpellInventory/SubViewportContainer/SubViewport" instance=ExtResource("23_ld1gn")]

[node name="FireSpellButton" type="Button" parent="PlayerUI/SpellInventory"]
layout_mode = 0
offset_left = 335.0
offset_top = 162.5
offset_right = 371.0
offset_bottom = 198.5
text = "Fire"

[node name="CreateNewSpellButton" type="Button" parent="PlayerUI/SpellInventory"]
layout_mode = 0
offset_top = 359.0
offset_right = 330.0
offset_bottom = 390.0
text = "+ Create new Spell"

[node name="EditSpell" type="Button" parent="PlayerUI/SpellInventory"]
layout_mode = 0
offset_left = 687.0
offset_top = 354.0
offset_right = 788.0
offset_bottom = 385.0
text = "Edit Spell"

[node name="Description" type="RichTextLabel" parent="PlayerUI/SpellInventory"]
layout_mode = 0
offset_left = 332.0
offset_top = 208.0
offset_right = 797.0
offset_bottom = 358.0
bbcode_enabled = true
text = "Spell Name: Spell Name
Element: [color=orange]Fire[/color]
Cast Time: 1.0 second(s)
MP Cost: 150 MP
Components: Multicast (8), Homing, Bounce (1), Life Steal"
fit_content = true

[node name="SpellBar" type="ColorRect" parent="PlayerUI" node_paths=PackedStringArray("spell_holder", "container")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -76.0
offset_right = 147.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.10748, 0.10748, 0.10748, 1)
script = ExtResource("19_0aego")
spell_holder = NodePath("../../Player/SpellHolder")
container = NodePath("HBoxContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerUI/SpellBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -33.5
offset_right = 140.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="Spell_Editor" type="ColorRect" parent="PlayerUI" node_paths=PackedStringArray("inventory")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -246.0
offset_right = -71.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 1)
script = ExtResource("25_33rrm")
inventory = NodePath("../../Player/Inventory")

[node name="ComponentSection" type="ColorRect" parent="PlayerUI/Spell_Editor"]
layout_mode = 0
offset_left = 320.0
offset_top = 256.0
offset_right = 849.0
offset_bottom = 468.0
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="ComponentSection2" type="ColorRect" parent="PlayerUI/Spell_Editor"]
layout_mode = 0
offset_left = 805.0
offset_top = 47.0
offset_right = 859.0
offset_bottom = 468.0
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="InfoSection" type="ColorRect" parent="PlayerUI/Spell_Editor"]
layout_mode = 0
offset_left = 325.0
offset_right = 859.0
offset_bottom = 54.0
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerUI/Spell_Editor/InfoSection"]
layout_mode = 0
offset_left = 10.0
offset_top = 16.0
offset_right = 527.0
offset_bottom = 63.0
bbcode_enabled = true
text = "CAST TIME: [color=cyan]1.00s[/color]																	MP COST: [color=coral]108[/color]"
fit_content = true
scroll_active = false

[node name="ScrollContainer" type="ScrollContainer" parent="PlayerUI/Spell_Editor"]
clip_contents = false
layout_mode = 0
offset_left = 10.0
offset_top = 94.0
offset_right = 325.0
offset_bottom = 418.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI/Spell_Editor/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpellName" type="TextEdit" parent="PlayerUI/Spell_Editor"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 326.0
offset_bottom = 49.0
placeholder_text = "SPELL NAME"
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
caret_multiple = false

[node name="ComponentList" type="ColorRect" parent="PlayerUI/Spell_Editor"]
layout_mode = 0
offset_left = 333.0
offset_top = 263.0
offset_right = 853.0
offset_bottom = 345.0
color = Color(0.17, 0.17, 0.17, 1)

[node name="HFlowContainer" type="HFlowContainer" parent="PlayerUI/Spell_Editor/ComponentList"]
layout_mode = 0
offset_left = 1.0
offset_top = 4.0
offset_right = 518.0
offset_bottom = 81.0

[node name="Description" type="RichTextLabel" parent="PlayerUI/Spell_Editor"]
layout_mode = 0
offset_left = 333.0
offset_top = 352.0
offset_right = 852.0
offset_bottom = 461.0
bbcode_enabled = true
text = "Name: Multi-cast (8)
Description: Allows the spell to be casted multiple times.
"
fit_content = true

[node name="CloseButton" type="Button" parent="PlayerUI/Spell_Editor"]
layout_mode = 0
offset_left = 5.0
offset_top = 423.0
offset_right = 141.0
offset_bottom = 463.0
text = "SAVE & CLOSE"

[node name="ComponentItem" type="ColorRect" parent="PlayerUI/Spell_Editor"]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = 60.0
offset_right = 288.0
offset_bottom = 95.0
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerUI/Spell_Editor/ComponentItem"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 215.0
offset_bottom = 40.0
bbcode_enabled = true
text = "Mulitcast (8)  [color=cyan]+0.1s[/color]  [color=coral]+5 MP[/color]"
fit_content = true
scroll_active = false

[node name="Button" type="Button" parent="PlayerUI/Spell_Editor/ComponentItem"]
layout_mode = 0
offset_left = 212.0
offset_top = 2.0
offset_right = 242.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 1, 0.00607109, 1)
text = "+"

[node name="Label" type="Label" parent="PlayerUI/Spell_Editor"]
layout_mode = 0
offset_left = 13.0
offset_top = 56.0
offset_right = 326.0
offset_bottom = 90.0
text = "Current Components in Inventory:"
vertical_alignment = 1

[node name="PauseMenu" type="Label" parent="PlayerUI"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -26.0
offset_right = 64.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_hvd33")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("24_q3krr")

[node name="Water" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 0)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Water"]
mesh = SubResource("BoxMesh_2es6m")

[connection signal="health_changed" from="Player" to="PlayerUI/HealthBar" method="_on_player_health_changed"]
[connection signal="spell_selected" from="Player/SpellHolder" to="PlayerUI/SpellBar" method="_on_spell_holder_spell_selected"]
[connection signal="spell_used" from="Player/SpellHolder" to="PlayerUI/SpellBar" method="_on_spell_holder_spell_used"]
[connection signal="pressed" from="PlayerUI/PlaySoundButton" to="PlayerUI/PlaySoundButton" method="_on_pressed"]
[connection signal="pressed" from="PlayerUI/SpellInventory/FireSpellButton" to="PlayerUI/SpellInventory" method="_on_fire_spell_button_pressed"]
[connection signal="pressed" from="PlayerUI/SpellInventory/EditSpell" to="PlayerUI/SpellInventory" method="_on_edit_spell_pressed"]
[connection signal="pressed" from="PlayerUI/Spell_Editor/CloseButton" to="PlayerUI/Spell_Editor" method="_on_close_button_pressed"]
